unit tests for local volumes

--- a/tox.ini
+++ b/tox.ini
@@ -2,11 +2,12 @@
 envlist =flake,py38,py39,py310
 
 [testenv]
-setenv =
-    PYTHONPATH = {toxinidir}:{toxinidir}/rick_vfs
+docker =
+    rick_vfs_minio
 commands =
     coverage erase
-    coverage run -m pytest --cov=rick_vfs --cov-append --cov-report=term-missing -s
+    coverage run -m pytest --cov=rick_vfs --cov-append
+
 deps = -rrequirements-dev.txt
 
 [testenv:flake]
@@ -21,3 +22,12 @@ exclude =
     build
 ignore = E501, W504 ,F401
 max_line_length = 100
+
+[docker:rick_vfs_minio]
+image = minio/minio:latest
+ports =
+  9010:9000/tcp
+  9011:9001/tcp
+environment =
+    MINIO_ROOT_USER=SomeTestUser
+    MINIO_ROOT_PASSWORD=SomeTestPassword
