tox-docker support

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,12 +1,16 @@
-pytest==7.1.2
+pytest==7.3.1
+pytest-cov==4.0.0
 pytest-testdox==3.0.1
-pytest-cov==3.0.0
-coverage==6.4.4
-flake8==5.0.4
-minio==7.1.11
+flake8==6.0.0
+flake8_black==0.3.6
+coverage==7.2.5
+tox==4.5.1
+tox-docker==4.1.0
+psycopg2-binary==2.9.3
+mkdocs==1.4.3
+mkdocs-material
+mkdocs-material-extensions
+minio==7.1.15
 python-magic==0.4.27
-setuptools~=60.0.0
-mkdocs==1.2.3
-mkdocs-material==8.1.2
-mkdocs-material-extensions==1.0.3
-tox==3.21.4
+setuptools>=65.5.1
+tox-docker==4.1.0
