--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist =flake,py38,py39,py310
+envlist = flake,py38,py39,py310,py311
 
 [testenv]
 commands =
@@ -20,3 +20,29 @@ exclude =
     build
 ignore = E501, W504 ,F401
 max_line_length = 100
+
+[docker:minio]
+image = bitnami/minio:latest
+
+environment =
+    MINIO_ROOT_USER=SomeTestUser
+    MINIO_ROOT_PASSWORD=SomeTestPassword
+
+ports =
+    9010:9000/tcp
+    9011:9001/tcp
+
+healthcheck_cmd = curl -f http://localhost:9000/minio/health/live
+healthcheck_interval = 30
+healthcheck_timeout = 20
+healthcheck_retries = 3
+healthcheck_start_period = 1
+
+command = server --console-address ":9001"
+
+[testenv:py{38,39,310,311}]
+docker = minio
+
+setenv =
+    MINIO_ROOT_USER=SomeTestUser
+    MINIO_ROOT_PASSWORD=SomeTestPassword
